k6-test-main/ebay/ebay/ebay-policies/testing/2x/42/require-run-as-non-root-user-id-10.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-policy-non-root-user-id-dev-10
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsUser` is either unset or set to a number greater than zero.
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: run-rule-as-non-root-user-id-10
      exclude:
        any:
        - resources:
            kinds:
            - Pod
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
                - key: application.tess.io/name
                  operator: In
                  values:
                  - tfap-lnp
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - tfap-lnp
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
      validate:
        message: >-
          Running as root is not allowed. The fields spec.securityContext.runAsUser,
          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
          and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
          set to a number greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(runAsUser): ">0"
            =(ephemeralContainers):
            - =(securityContext):
                =(runAsUser): ">0"
            =(initContainers):
            - =(securityContext):
                =(runAsUser): ">0"
            containers:
            - =(securityContext):
                =(runAsUser): ">0"
